[package]
name = "jumprope"
version = "0.1.0"
authors = ["Brennan Chesley <holtchesley@example.com>"]

[dependencies]
regex-syntax = { path = "regex-syntax", version = "0.4.0" }
regex = "0.2"
lazy_static = "0.2.8"
itertools = "0.6.0"
time = "0.1"
clap = "2.23.3"
chan = "0.1"
chan-signal = "0.2.0"

[dev-dependencies]
quickcheck = { version = "0.4.1", default-features = false }
rand = "0.3"

# [dependencies.nom]
# version = "^2.2"
# features = ["regexp", "regexp_macros", "verbose-errors"]
